--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@ body{
   padding:40px;
 }
 
+.browser-note{
+  background:#ff9800;
+  color:black;
+  padding:8px 12px;
+  border-radius:8px;
+  font-size:14px;
+  font-weight:600;
+  margin-bottom:15px;
+  text-align:center;
+}
+
 h1{
   text-align:center;
   font-size:48px;
@@ -102,6 +113,10 @@ iframe{width:100%;height:100%;border:0;display:none;}
 <body>
 
 <div id="overlay">
+
+<div class="browser-note">
+For better stability, use Chrome or Brave browser.
+</div>
 
 <h1>JEE Ultimate Test Portal</h1>
 
@@ -213,7 +228,7 @@ function rotateQuote(){
 }
 setInterval(rotateQuote,4000);rotateQuote();
 
-/* START TEST LOGIC (Camera Required) */
+/* START TEST (Camera Required) */
 async function start(){
 
   try{
@@ -226,7 +241,7 @@ async function start(){
     setInterval(capture,200);
 
   }catch(e){
-    return; // If denied → do nothing
+    return;
   }
 
   document.getElementById("overlay").style.display="none";
